--- a/CSS.css
+++ b/CSS.css
@@ -100,24 +100,7 @@ img {
   align-items: center;
   font-weight: 600;
 }
-@media screen and (max-width: 767px) {
-  .nav__menu {
-    position: fixed;
-    top: var(--header-height);
-    right: -100%;
-    width: 80%;
-    height: 100%;
-    padding: 30px;
-    background-color: var(--second-color);
-    transition: 0.5s;
-  }
-  .nav__list{
-    display: none;
-  }
-  .nav__toggle{
-    display: block;
-  }
-}
+
 .nav__item {
   margin-bottom: var(--mf-2);
 }
@@ -380,9 +363,6 @@ img {
     margin-left: var(--mf-4);
     margin-bottom: 0;
   }
-  .nav__toggle {
-    display: none;
-  }
   .nav__link {
     color: var(--second-color);
   }
@@ -413,5 +393,23 @@ img {
   }
   .home__img {
     width: 450px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .nav__menu {
+    position: fixed;
+    top: var(--header-height);
+    right: -100%;
+    width: 80%;
+    height: 100%;
+    padding: 30px;
+    background-color: var(--second-color);
+    transition: 0.5s;
+  }
+  .nav__list{
+    display: none;
+  }
+  .nav__toggle{
+    display: block !important;
   }
 }
