--- a/CSS.css
+++ b/CSS.css
@@ -127,10 +127,6 @@ img {
   display: none;
 }
 
-.show {
-  right: 0;
-}
-
 .home {
   position: relative;
   row-gap: 80px;
@@ -171,7 +167,19 @@ img {
 .home__blob-img {
   width: 360px;
 }
-
+.nav__button{
+  display: inline-block;
+  background-color: #fff;
+  border-color: var(--second-color);
+  padding: 12px 12px;
+  border-radius: 50%;
+  transition: 0.3s;
+}
+.nav__button:hover {
+  background-color: var(--second-color);
+  box-shadow: 0px 0px 26px rgba(29, 47, 56, 0.65);
+  cursor: pointer;
+}
 .button {
   display: inline-block;
   background-color: var(--first-color);
